Ajout du bouton 'essayer à nouveau' et quelques comme,taires dans le script

--- a/quiz.html
+++ b/quiz.html
@@ -69,11 +69,17 @@
           </div>
         </div>
 
-        <button type="submit">Validez vos choix !</button>
+        <div classe="inLineButton">
+          <button type="submit">Validez vos choix !</button>
+
+          <button type="reset" id="raffrechir" value="reset" class="refresh">
+            Essayer à nouveau
+          </button>
+        </div>
       </form>
 
       <div class="resultats">
-        <h2>Résultats ✔️ ✨ 👎</h2>
+        <h2>Résultats ✅ ✨ 👎</h2>
         <p class="note"></p>
       </div>
     </div>
